--- a/Pages/Registros/R_Paciente.razor
+++ b/Pages/Registros/R_Paciente.razor
@@ -48,7 +48,7 @@
     </style>
 </head>
 
-
+<RadzenCard class="rz-shadow-7 rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12">
 <h1>Registrar Paciente</h1>
 
 <RadzenTemplateForm TItem="Paciente" Data="paciente" Submit="Guardar" >
@@ -165,7 +165,7 @@
 
 </RadzenTemplateForm>
 
-
+</RadzenCard>
 
 @code {
     public Paciente paciente { get; set; } = new Paciente();
