--- a/Pages/Consultas/C_Paciente.razor
+++ b/Pages/Consultas/C_Paciente.razor
@@ -1,9 +1,7 @@
 ﻿@page "/C_Paciente"
-<h3>Consultar Paciente</h3>
-
-
 @inject PacienteBLL Paciente
-
+@inject DialogService DialogService
+@inject IJSRuntime IJS
 
 <head>
     <style>
@@ -40,13 +38,30 @@
         border-radius: 15px;
         width: 100%;
     }
+    .Entrada select {
+        width: 200px;
+        height: 35px;
+        border-radius: 50px;
+        background-color: #D9D9D9;
+        border-color: #D9D9D9;
+        border: 15px;
+        margin: 5px;
+    }
 
     </style>
 </head>
     
-
+    <RadzenCard class="rz-shadow-7 rz-my-12 rz-mx-auto rz-p-4 rz-p-md-12">
+    <RadzenFieldset>
+            <HeaderTemplate>
+            <span class="d-inline-flex align-items-center align-middle">
+                <RadzenIcon Icon="account_box" class="me-1" /><b>Consultar Pacientes</b>
+            </span>
+        </HeaderTemplate>
+        <ChildContent>
+        <RadzenButton Text="Generar Reporte" Click="ShowInlineDialog" ButtonStyle="ButtonStyle.Secondary" />
 <RadzenDataGrid AllowFiltering="true" AllowColumnResize="true" AllowAlternatingRows="false" FilterMode="FilterMode.Advanced"
-    AllowGrouping="true" AllowSorting="true" AllowPaging="true" PagerHorizontalAlign="HorizontalAlign.Left"
+    AllowGrouping="true" AllowSorting="true" PageSize="8" AllowPaging="true" PagerHorizontalAlign="HorizontalAlign.Left"
     Data="Paciente.GetList()" TItem="Paciente" ColumnWidth="300px" LogicalFilterOperator="LogicalFilterOperator.Or" ShowPagingSummary="true">
 
         <Columns>
@@ -67,7 +82,39 @@
         </Columns>
 
     </RadzenDataGrid>
+    </ChildContent>
+    </RadzenFieldset>
+
+</RadzenCard>
 
 @code {
+    public string eleccion{get;set;}
+    public string[] opciones {get;set;} = {"Hoy","Esta Semana","Ultimos 15 dias","Este mes","Este año","Todos"};
+
+int orderID = 10248;
+
+    async Task ShowInlineDialog()
+    {
+        var result = await DialogService.OpenAsync("Generar Reporte", ds =>
+        @<div>
+            <div class="row">
+                <div class="Entrada col">
+                <label for="Persona">Rango de Tiempo</label>
+                        <select id="Persona" name="Persona" @bind="eleccion">
+                        @foreach (var item in opciones)
+                        {
+                            <option value="@item"> @item</option>
+                        }
+                    </select>
+                    <RadzenButton ButtonStyle="ButtonStyle.Secondary" Click="Imprimir" ><RadzenIcon Icon="print"/>Imprimir</RadzenButton>
+                </div>
+            </div>
+        </div>);
+    }
+
+    public async Task Imprimir()
+    {
+        await IJS.InvokeAsync<object>("open", new object[] { $"/I_OrdenCompra/{Array.IndexOf(opciones, eleccion)}","_blank"});
+    }
 
 }
